--- a/index.html
+++ b/index.html
@@ -3,47 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>French Verb Conjugation</title>
+    <title>French Verb Conjugations</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <h1>French Verb Conjugations</h1>
+
     <table>
         <tr>
-            <th>Pronoun</th>
-            <th>Conjugation</th>
-            <th>Audio</th>
+            <th>Verb</th>
+            <th>Je</th>
+            <th>Tu</th>
+            <th>Il</th>
+            <th>Elle</th>
+            <th>Nous</th>
+            <th>Vous</th>
+            <th>Ils</th>
+            <th>Elles</th>
         </tr>
         <tr>
-            <td>Je</td>
-            <td>aime</td>
-            <td><button onclick="speak('Je aime')">🔊</button></td>
+            <td>Aimer</td>
+            <td><button onclick="speak('Je aime')">Je aime 🔊</button></td>
+            <td><button onclick="speak('Tu aimes')">Tu aimes 🔊</button></td>
+            <td><button onclick="speak('Il aime')">Il aime 🔊</button></td>
+            <td><button onclick="speak('Elle aime')">Elle aime 🔊</button></td>
+            <td><button onclick="speak('Nous aimons')">Nous aimons 🔊</button></td>
+            <td><button onclick="speak('Vous aimez')">Vous aimez 🔊</button></td>
+            <td><button onclick="speak('Ils aiment')">Ils aiment 🔊</button></td>
+            <td><button onclick="speak('Elles aiment')">Elles aiment 🔊</button></td>
         </tr>
         <tr>
-            <td>Tu</td>
-            <td>aimes</td>
-            <td><button onclick="speak('Tu aimes')">🔊</button></td>
-        </tr>
-        <tr>
-            <td>Il/Elle</td>
-            <td>aime</td>
-            <td><button onclick="speak('Il aime')">🔊</button></td>
-        </tr>
-        <tr>
-            <td>Nous</td>
-            <td>aimons</td>
-            <td><button onclick="speak('Nous aimons')">🔊</button></td>
-        </tr>
-        <tr>
-            <td>Vous</td>
-            <td>aimez</td>
-            <td><button onclick="speak('Vous aimez')">🔊</button></td>
-        </tr>
-        <tr>
-            <td>Ils/Elles</td>
-            <td>aiment</td>
-            <td><button onclick="speak('Ils aiment')">🔊</button></td>
+            <td>Finir</td>
+            <td><button onclick="speak('Je finis')">Je finis 🔊</button></td>
+            <td><button onclick="speak('Tu finis')">Tu finis 🔊</button></td>
+            <td><button onclick="speak('Il finit')">Il finit 🔊</button></td>
+            <td><button onclick="speak('Elle finit')">Elle finit 🔊</button></td>
+            <td><button onclick="speak('Nous finissons')">Nous finissons 🔊</button></td>
+            <td><button onclick="speak('Vous finissez')">Vous finissez 🔊</button></td>
+            <td><button onclick="speak('Ils finissent')">Ils finissent 🔊</button></td>
+            <td><button onclick="speak('Elles finissent')">Elles finissent 🔊</button></td>
         </tr>
     </table>
 
