--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
             <th>Ils</th>
             <th>Elles</th>
         </tr>
+
         <tr>
             <td>Aimer</td>
-            <td><button onclick="speak('Je aime')">Je aime 🔊</button></td>
+            <td><button onclick="speak(`J'aime`)">J'aime 🔊</button></td>
             <td><button onclick="speak('Tu aimes')">Tu aimes 🔊</button></td>
             <td><button onclick="speak('Il aime')">Il aime 🔊</button></td>
             <td><button onclick="speak('Elle aime')">Elle aime 🔊</button></td>
@@ -33,16 +34,65 @@
             <td><button onclick="speak('Ils aiment')">Ils aiment 🔊</button></td>
             <td><button onclick="speak('Elles aiment')">Elles aiment 🔊</button></td>
         </tr>
+
         <tr>
-            <td>Finir</td>
-            <td><button onclick="speak('Je finis')">Je finis 🔊</button></td>
-            <td><button onclick="speak('Tu finis')">Tu finis 🔊</button></td>
-            <td><button onclick="speak('Il finit')">Il finit 🔊</button></td>
-            <td><button onclick="speak('Elle finit')">Elle finit 🔊</button></td>
-            <td><button onclick="speak('Nous finissons')">Nous finissons 🔊</button></td>
-            <td><button onclick="speak('Vous finissez')">Vous finissez 🔊</button></td>
-            <td><button onclick="speak('Ils finissent')">Ils finissent 🔊</button></td>
-            <td><button onclick="speak('Elles finissent')">Elles finissent 🔊</button></td>
+            <td>Manger</td>
+            <td><button onclick="speak(`Je mange`)">Je mange 🔊</button></td>
+            <td><button onclick="speak('Tu manges')">Tu manges 🔊</button></td>
+            <td><button onclick="speak('Il mange')">Il mange 🔊</button></td>
+            <td><button onclick="speak('Elle mange')">Elle mange 🔊</button></td>
+            <td><button onclick="speak('Nous mangeons')">Nous mangeons 🔊</button></td>
+            <td><button onclick="speak('Vous mangez')">Vous mangez 🔊</button></td>
+            <td><button onclick="speak('Ils mangent')">Ils mangent 🔊</button></td>
+            <td><button onclick="speak('Elles mangent')">Elles mangent 🔊</button></td>
+        </tr>
+
+        <tr>
+            <td>Habiter</td>
+            <td><button onclick="speak(`J'habite`)">J'habite 🔊</button></td>
+            <td><button onclick="speak('Tu habites')">Tu habites 🔊</button></td>
+            <td><button onclick="speak('Il habite')">Il habite 🔊</button></td>
+            <td><button onclick="speak('Elle habite')">Elle habite 🔊</button></td>
+            <td><button onclick="speak('Nous habitons')">Nous habitons 🔊</button></td>
+            <td><button onclick="speak('Vous habitez')">Vous habitez 🔊</button></td>
+            <td><button onclick="speak('Ils habitent')">Ils habitent 🔊</button></td>
+            <td><button onclick="speak('Elles habitent')">Elles habitent 🔊</button></td>
+        </tr>
+
+        <tr>
+            <td>Parler</td>
+            <td><button onclick="speak(`Je parle`)">Je parle 🔊</button></td>
+            <td><button onclick="speak('Tu parles')">Tu parles 🔊</button></td>
+            <td><button onclick="speak('Il parle')">Il parle 🔊</button></td>
+            <td><button onclick="speak('Elle parle')">Elle parle 🔊</button></td>
+            <td><button onclick="speak('Nous parlons')">Nous parlons 🔊</button></td>
+            <td><button onclick="speak('Vous parlez')">Vous parlez 🔊</button></td>
+            <td><button onclick="speak('Ils parlent')">Ils parlent 🔊</button></td>
+            <td><button onclick="speak('Elles parlent')">Elles parlent 🔊</button></td>
+        </tr>
+
+        <tr>
+            <td>Travailler</td>
+            <td><button onclick="speak(`Je travaille`)">Je travaille 🔊</button></td>
+            <td><button onclick="speak('Tu travailles')">Tu travailles 🔊</button></td>
+            <td><button onclick="speak('Il travaille')">Il travaille 🔊</button></td>
+            <td><button onclick="speak('Elle travaille')">Elle travaille 🔊</button></td>
+            <td><button onclick="speak('Nous travaillons')">Nous travaillons 🔊</button></td>
+            <td><button onclick="speak('Vous travaillez')">Vous travaillez 🔊</button></td>
+            <td><button onclick="speak('Ils travaillent')">Ils travaillent 🔊</button></td>
+            <td><button onclick="speak('Elles travaillent')">Elles travaillent 🔊</button></td>
+        </tr>
+
+        <tr>
+            <td>Voyager</td>
+            <td><button onclick="speak(`Je voyage`)">Je voyage 🔊</button></td>
+            <td><button onclick="speak('Tu voyages')">Tu voyages 🔊</button></td>
+            <td><button onclick="speak('Il voyage')">Il voyage 🔊</button></td>
+            <td><button onclick="speak('Elle voyage')">Elle voyage 🔊</button></td>
+            <td><button onclick="speak('Nous voyageons')">Nous voyageons 🔊</button></td>
+            <td><button onclick="speak('Vous voyagez')">Vous voyagez 🔊</button></td>
+            <td><button onclick="speak('Ils voyagent')">Ils voyagent 🔊</button></td>
+            <td><button onclick="speak('Elles voyagent')">Elles voyagent 🔊</button></td>
         </tr>
     </table>
 
