--- a/index.html
+++ b/index.html
@@ -102,74 +102,89 @@
             <td>Visiter</td>
             <td><button onclick="speak('Je visite')">Je visite</button></td>
             <td><button onclick="speak('Tu visites')">Tu visites</button></td>
-            <td><button onclick="speak('Il/Elle visite')">Il/Elle visite</button></td>
+            <td><button onclick="speak('Il visite')">Il visite</button></td>
+            <td><button onclick="speak('Elle visite')">Elle visite</button></td>
             <td><button onclick="speak('Nous visitons')">Nous visitons</button></td>
             <td><button onclick="speak('Vous visitez')">Vous visitez</button></td>
-            <td><button onclick="speak('Ils/Elles visitent')">Ils/Elles visitent</button></td>
+            <td><button onclick="speak('Ils visitent')">Ils visitent</button></td>
+            <td><button onclick="speak('Elles visitent')">Elles visitent</button></td>
         </tr>
         <tr>
             <td>Fermer</td>
             <td><button onclick="speak('Je ferme')">Je ferme</button></td>
             <td><button onclick="speak('Tu fermes')">Tu fermes</button></td>
-            <td><button onclick="speak('Il/Elle ferme')">Il/Elle ferme</button></td>
+            <td><button onclick="speak('Il ferme')">Il ferme</button></td>
+            <td><button onclick="speak('Elle ferme')">Elle ferme</button></td>
             <td><button onclick="speak('Nous fermons')">Nous fermons</button></td>
             <td><button onclick="speak('Vous fermez')">Vous fermez</button></td>
-            <td><button onclick="speak('Ils/Elles ferment')">Ils/Elles ferment</button></td>
+            <td><button onclick="speak('Ils ferment')">Ils ferment</button></td>
+            <td><button onclick="speak('Elles ferment')">Elles ferment</button></td>
         </tr>
         <tr>
             <td>Préparer</td>
             <td><button onclick="speak('Je prépare')">Je prépare</button></td>
             <td><button onclick="speak('Tu prépares')">Tu prépares</button></td>
-            <td><button onclick="speak('Il/Elle prépare')">Il/Elle prépare</button></td>
+            <td><button onclick="speak('Il prépare')">Il prépare</button></td>
+            <td><button onclick="speak('Elle prépare')">Elle prépare</button></td>
             <td><button onclick="speak('Nous préparons')">Nous préparons</button></td>
             <td><button onclick="speak('Vous préparez')">Vous préparez</button></td>
-            <td><button onclick="speak('Ils/Elles préparent')">Ils/Elles préparent</button></td>
+            <td><button onclick="speak('Ils préparent')">Ils préparent</button></td>
+            <td><button onclick="speak('Elles préparent')">Elles préparent</button></td>
         </tr>
         <tr>
             <td>Regarder</td>
             <td><button onclick="speak('Je regarde')">Je regarde</button></td>
             <td><button onclick="speak('Tu regardes')">Tu regardes</button></td>
-            <td><button onclick="speak('Il/Elle regarde')">Il/Elle regarde</button></td>
+            <td><button onclick="speak('Il regarde')">Il regarde</button></td>
+            <td><button onclick="speak('Elle regarde')">Elle regarde</button></td>
             <td><button onclick="speak('Nous regardons')">Nous regardons</button></td>
             <td><button onclick="speak('Vous regardez')">Vous regardez</button></td>
-            <td><button onclick="speak('Ils/Elles regardent')">Ils/Elles regardent</button></td>
+            <td><button onclick="speak('Ils regardent')">Ils regardent</button></td>
+            <td><button onclick="speak('Elles regardent')">Elles regardent</button></td>
         </tr>
-        
         <tr>
             <td>Utiliser</td>
             <td><button onclick="speak('J\'utilise')">J'utilise</button></td>
             <td><button onclick="speak('Tu utilises')">Tu utilises</button></td>
-            <td><button onclick="speak('Il/Elle utilise')">Il/Elle utilise</button></td>
+            <td><button onclick="speak('Il utilise')">Il utilise</button></td>
+            <td><button onclick="speak('Elle utilise')">Elle utilise</button></td>
             <td><button onclick="speak('Nous utilisons')">Nous utilisons</button></td>
             <td><button onclick="speak('Vous utilisez')">Vous utilisez</button></td>
-            <td><button onclick="speak('Ils/Elles utilisent')">Ils/Elles utilisent</button></td>
+            <td><button onclick="speak('Ils utilisent')">Ils utilisent</button></td>
+            <td><button onclick="speak('Elles utilisent')">Elles utilisent</button></td>
         </tr>
         <tr>
             <td>Écouter</td>
             <td><button onclick="speak('J\'écoute')">J'écoute</button></td>
             <td><button onclick="speak('Tu écoutes')">Tu écoutes</button></td>
-            <td><button onclick="speak('Il/Elle écoute')">Il/Elle écoute</button></td>
+            <td><button onclick="speak('Il écoute')">Il écoute</button></td>
+            <td><button onclick="speak('Elle écoute')">Elle écoute</button></td>
             <td><button onclick="speak('Nous écoutons')">Nous écoutons</button></td>
             <td><button onclick="speak('Vous écoutez')">Vous écoutez</button></td>
-            <td><button onclick="speak('Ils/Elles écoutent')">Ils/Elles écoutent</button></td>
+            <td><button onclick="speak('Ils écoutent')">Ils écoutent</button></td>
+            <td><button onclick="speak('Elles écoutent')">Elles écoutent</button></td>
         </tr>
         <tr>
             <td>Coûter</td>
             <td><button onclick="speak('Je coûte')">Je coûte</button></td>
             <td><button onclick="speak('Tu coûtes')">Tu coûtes</button></td>
-            <td><button onclick="speak('Il/Elle coûte')">Il/Elle coûte</button></td>
+            <td><button onclick="speak('Il coûte')">Il coûte</button></td>
+            <td><button onclick="speak('Elle coûte')">Elle coûte</button></td>
             <td><button onclick="speak('Nous coûtons')">Nous coûtons</button></td>
             <td><button onclick="speak('Vous coûtez')">Vous coûtez</button></td>
-            <td><button onclick="speak('Ils/Elles coûtent')">Ils/Elles coûtent</button></td>
+            <td><button onclick="speak('Ils coûtent')">Ils coûtent</button></td>
+            <td><button onclick="speak('Elles coûtent')">Elles coûtent</button></td>
         </tr>
         <tr>
             <td>Acheter</td>
             <td><button onclick="speak('J\'achète')">J'achète</button></td>
             <td><button onclick="speak('Tu achètes')">Tu achètes</button></td>
-            <td><button onclick="speak('Il/Elle achète')">Il/Elle achète</button></td>
+            <td><button onclick="speak('Il achète')">Il achète</button></td>
+            <td><button onclick="speak('Elle achète')">Elle achète</button></td>
             <td><button onclick="speak('Nous achetons')">Nous achetons</button></td>
             <td><button onclick="speak('Vous achetez')">Vous achetez</button></td>
-            <td><button onclick="speak('Ils/Elles achètent')">Ils/Elles achètent</button></td>
+            <td><button onclick="speak('Ils achètent')">Ils achètent</button></td>
+            <td><button onclick="speak('Elles achètent')">Elles achètent</button></td>
         </tr>
     </table>
 
