--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <td><button onclick="speak('Tu regardes')">Tu regardes 🔊</button></td>
             <td><button onclick="speak('Il regarde')">Il regarde 🔊</button></td>
             <td><button onclick="speak('Elle regarde')">Elle regarde 🔊</button></td>
-            <td><button onclick="speak('Nous regardons')">Nous regardons 🔊/button></td>
+            <td><button onclick="speak('Nous regardons')">Nous regardons 🔊</button></td>
             <td><button onclick="speak('Vous regardez')">Vous regardez 🔊</button></td>
             <td><button onclick="speak('Ils regardent')">Ils regardent 🔊</button></td>
             <td><button onclick="speak('Elles regardent')">Elles regardent 🔊</button></td>
@@ -236,6 +236,17 @@
             <td><button onclick="speak('Vous êtes')">Vous êtes 🔊</button></td>
             <td><button onclick="speak('Ils sont')">Ils sont 🔊</button></td>
             <td><button onclick="speak('Elles sont')">Elles sont 🔊</button></td>
+        </tr>
+        <tr>
+            <td>Avoir</td>
+            <td><button onclick="speak(`J'ai`)">J'ai 🔊</button></td>
+            <td><button onclick="speak('Tu as')">Tu as 🔊</button></td>
+            <td><button onclick="speak('Il a')">Il a 🔊</button></td>
+            <td><button onclick="speak('Elle a')">Elle a 🔊</button></td>
+            <td><button onclick="speak('Nous avons')">Nous avons 🔊</button></td>
+            <td><button onclick="speak('Vous avez')">Vous avez 🔊</button></td>
+            <td><button onclick="speak('Ils ont')">Ils ont 🔊</button></td>
+            <td><button onclick="speak('Elles ont')">Elles ont 🔊</button></td>
         </tr>
     </table>
 
